[gd_scene load_steps=10 format=3 uid="uid://bgfhwdfy73kb2"]

[ext_resource type="Script" uid="uid://b58858bycdlxv" path="res://GUI Scripts/space_shooter.gd" id="1_1a5ep"]
[ext_resource type="PackedScene" uid="uid://bd5dbqh2vgscj" path="res://GUI Scenes/space_ship.tscn" id="2_egeto"]
[ext_resource type="AudioStream" uid="uid://dv6r6cgkwvenq" path="res://Assets/Audio & Sound Effects/laser.ogg" id="4_u2qws"]
[ext_resource type="PackedScene" uid="uid://c1eueho8pw4yu" path="res://GUI Scenes/spaceshooterhud.tscn" id="5_5xv8v"]
[ext_resource type="AudioStream" uid="uid://bfnkyv2x1sl2j" path="res://Assets/Audio & Sound Effects/Explosion Sound Effect.mp3" id="5_cr8vu"]
[ext_resource type="PackedScene" uid="uid://d1g1uyyw0qowb" path="res://GUI Scenes/enemy_ships.tscn" id="5_u3338"]
[ext_resource type="AudioStream" uid="uid://b7b30w0up41mm" path="res://Assets/Audio & Sound Effects/Hit Sound Effect.mp3" id="6_4o31u"]
[ext_resource type="PackedScene" uid="uid://cb2s2x7k73gan" path="res://GUI Scenes/elite_space_enemy.tscn" id="6_ddcqd"]
[ext_resource type="PackedScene" uid="uid://0ykyiawmntci" path="res://GUI Scenes/space_ship_game_over.tscn" id="6_ur8aa"]

[node name="SpaceShooter" type="Control"]
custom_minimum_size = Vector2(450, 600)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -300.0
offset_right = 225.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1a5ep")
enemyscenes = Array[PackedScene]([ExtResource("5_u3338"), ExtResource("6_ddcqd")])

[node name="SFX" type="Node" parent="."]

[node name="LaserShootingSound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("4_u2qws")

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("5_cr8vu")

[node name="HitSound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("6_4o31u")

[node name="UI layer" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI layer" instance=ExtResource("5_5xv8v")]

[node name="SpaceShipGameOver" parent="UI layer" instance=ExtResource("6_ur8aa")]
visible = false

[node name="SpaceShip" parent="." instance=ExtResource("2_egeto")]
position = Vector2(-351, -5)

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(218, 525)

[node name="LaserContainer" type="Node2D" parent="."]
position = Vector2(0, -14)

[node name="EnemyContainer" type="Node2D" parent="."]
position = Vector2(2, -69)

[node name="EnemySpawnRate" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="EnemySpawnRate" to="." method="_on_enemy_spawn_rate_timeout"]
